--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,10 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite-tsconfig-paths": "^4.0.5",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-tsconfig-paths": "^4.0.5"
   }
 }
